--- a/covid19.html
+++ b/covid19.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mjl – importance of financial literacy</title>
+  <title>mjl – economics of systemic racism</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -79,8 +79,8 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
 
-            <h2>The Importance of Financial Literacy</h2>
-            <p>What the American education system lacks.</p>
+            <h2>COVID-19’s Impact On Small Businesses</h2>
+            <p>The real impact on the economy.</p>
 
           </div>
 
@@ -92,20 +92,21 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/financialliteracy_big.jpg" alt="Image" class="img-fluid">
-              <p class="text-center">Photo by <a href="https://unsplash.com/@jpvalery?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jp Valery</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+              <img src="img/covid19_big.jpg" alt="Image" class="img-fluid">
+              <p class="text-center"><span>Photo by <a href="https://unsplash.com/@anastasiiachepinska?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Anastasiia Chepinska</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 			  </p>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
 				<br>
-                <h3 class="h3">Financial Literacy</h3>
-                <p class="mb-4"><span class="text-muted">It Affects All of Society</span></p>
+                <h3 class="h3">Yelp's Economic Indicator</h3>
+                <p class="mb-4"><span class="text-muted">Hidden Measures</span></p>
                 <div class="mb-5">
-                  <p>It’s no secret Americans fall short when it comes to financial literacy. In fact, only 57% of the U.S. adult population is financially literate, which is only slightly higher than that of Botswana, whose economy is 1,127% smaller. Financial illiteracy affects every part of society. The irony lies within us — although the US is regarded as a financial superpower, the very own citizens in America are ignorant when it comes to managing or planning for their prospective finances. </p>
+                  <p>A surge of unemployment has shaken the US economy in light of COVID-19. American businesses, small and large, are experiencing record-low sales, record-high layoffs, and a six-month forecast that is anything but certain. In order to subdue the coronavirus outbreak, public health officials are telling Americans to wear a mask, avoid face-to-face contact, and shelter-in-place. With over 5 million confirmed cases in the US as of August 2020, not only is our health at risk, but our livelihoods as well.
+                  </p>
                 </div>
                 <h4 class="h4 mb-3">Read More:</h4>
-                <p><a href="http://streetfins.com/the-importance-of-financial-literacy/" class="readmore">Streetfins</a> <a href="https://blog.usejournal.com/the-importance-of-financial-literacy-4ae1e0bd8096" class="readmore">Medium</a></p>
+                <p><a href="https://streetfins.com/covid-19s-impact-on-small-businesses/" class="readmore">Streetfins</a> <a href="https://matthewjlim.medium.com/a-surge-of-unemployment-has-shaken-the-us-economy-in-light-of-covid-19-3f83396d92ca" class="readmore">Medium</a></p>
 			
               </div>
             </div>
